--- a/css/style.css
+++ b/css/style.css
@@ -213,4 +213,22 @@ input {
 }
 .btn span:where(.icon-arrow)::after {
   transform: rotate(-45deg);
+}
+.btn span:where(.icon-locke) {
+  position: relative;
+  width: 1rem;
+  aspect-ratio: 1;
+  background-color: var(--accent-1);
+  border-radius: 0.25rem;
+}
+.btn span:where(.icon-locke)::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0.375rem;
+  aspect-ratio: 1;
+  border: 0.1875rem solid var(--accent-1);
+  border-radius: 50%;
 }/*# sourceMappingURL=style.css.map */
